--- a/javascript/rest-nextjs/package.json
+++ b/javascript/rest-nextjs/package.json
@@ -12,13 +12,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "@prisma/client": "2.30.2",
+    "@prisma/client": "2.31.0-dev.34",
     "next": "^11.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-markdown": "^5.0.0"
   },
   "devDependencies": {
-    "prisma": "2.30.2"
+    "prisma": "2.31.0-dev.34"
   }
 }
