--- a/javascript/script/package.json
+++ b/javascript/script/package.json
@@ -6,9 +6,9 @@
     "dev": "node ./script.js"
   },
   "dependencies": {
-    "@prisma/client": "2.30.2"
+    "@prisma/client": "2.31.0-dev.34"
   },
   "devDependencies": {
-    "prisma": "2.30.2"
+    "prisma": "2.31.0-dev.34"
   }
 }
