--- a/typescript/graphql/package.json
+++ b/typescript/graphql/package.json
@@ -16,7 +16,7 @@
     "trailingComma": "all"
   },
   "dependencies": {
-    "@prisma/client": "2.30.2",
+    "@prisma/client": "2.31.0-dev.34",
     "apollo-server": "2.25.2",
     "graphql": "15.5.2",
     "graphql-scalars": "1.10.0",
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "@types/node": "14.17.14",
-    "prisma": "2.30.2",
+    "prisma": "2.31.0-dev.34",
     "ts-node": "10.2.1",
     "ts-node-dev": "1.1.8",
     "typescript": "4.4.2"
