--- a/javascript/graphql-sdl-first/package.json
+++ b/javascript/graphql-sdl-first/package.json
@@ -9,12 +9,12 @@
     "trailingComma": "all"
   },
   "dependencies": {
-    "@prisma/client": "2.30.2",
+    "@prisma/client": "2.30.1-dev.2",
     "apollo-server": "2.25.2",
     "graphql": "15.5.2",
     "graphql-scalars": "1.10.0"
   },
   "devDependencies": {
-    "prisma": "2.30.2"
+    "prisma": "2.30.1-dev.2"
   }
 }
