--- a/javascript/grpc/package.json
+++ b/javascript/grpc/package.json
@@ -13,11 +13,11 @@
   },
   "dependencies": {
     "@grpc/proto-loader": "0.6.4",
-    "@prisma/client": "2.30.2",
+    "@prisma/client": "2.30.1-dev.2",
     "chalk": "4.1.2",
     "grpc": "1.24.11"
   },
   "devDependencies": {
-    "prisma": "2.30.2"
+    "prisma": "2.30.1-dev.2"
   }
 }
