--- a/javascript/rest-fastify/package.json
+++ b/javascript/rest-fastify/package.json
@@ -6,10 +6,10 @@
     "dev": "node src/index.js"
   },
   "dependencies": {
-    "@prisma/client": "2.30.2",
+    "@prisma/client": "2.30.1-dev.2",
     "fastify": "3.20.2"
   },
   "devDependencies": {
-    "prisma": "2.30.2"
+    "prisma": "2.30.1-dev.2"
   }
 }
