--- a/deployment-platforms/heroku/package.json
+++ b/deployment-platforms/heroku/package.json
@@ -8,10 +8,10 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "@prisma/client": "2.30.2",
+    "@prisma/client": "2.30.1-dev.2",
     "body-parser": "1.19.0",
     "express": "4.17.1",
-    "prisma": "2.30.2"
+    "prisma": "2.30.1-dev.2"
   },
   "devDependencies": {}
 }
