--- a/deployment-platforms/aws-lambda/package.json
+++ b/deployment-platforms/aws-lambda/package.json
@@ -7,10 +7,10 @@
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "2.30.2"
+    "@prisma/client": "2.31.0-dev.35"
   },
   "devDependencies": {
-    "prisma": "2.30.2",
+    "prisma": "2.31.0-dev.35",
     "serverless-dotenv-plugin": "3.9.0"
   }
 }
